# pyopnsense

./: .gitignore  .stestr.conf  .travis.yml  README.rst  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main.yml
.travis/: coveralls.sh
doc/source/: api.rst  index.rst
doc/src/: conf.py  index.rst
pyopnsense/: backup.py  client.py  diagnostics.py  exceptions.py  firewall.py  firmware.py  routes.py
pyopnsense/tests/: base.py  test_client.py
