[metadata]
name = pyopnsense
summary = A python API client for OPNsense
homepage = http://github.com/mtreinish/pyopnsense
description_file =
    README.rst
author = Matthew Treinish
author_email = mtreinish@kortar.org
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
python_requires = >=3.8

[files]
packages =
    pyopnsense

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
